[Extensions UI] Tweak the constants for extension action grayscaling

The previous grayscaling wasn't enough for extension actions that were mostly
black-and-white. Make it a little more noticable. Note that this is still a
problem for extension actions that just happen to be gray by default as well
as for a11y. :( See crbug.com/597657.

BUG=597981

Review URL: https://codereview.chromium.org/1834293003

Cr-Commit-Position: refs/heads/master@{#383578}

Former-commit-id: f51a8dcc39fba8b6ce644a54f1ff3814e255b03e