chrome/browser/ui/extensions/icon_with_badge_image_source.cc
@@ -138,7 +138,7 @@ void IconWithBadgeImageSource::Draw(gfx::Canvas* canvas) {
         rep, ExtensionAction::ActionIconSize(), canvas->image_scale()));
   }
   if (grayscale_)
-    skia = gfx::ImageSkiaOperations::CreateHSLShiftedImage(skia, {-1, 0, 0.6});
+    skia = gfx::ImageSkiaOperations::CreateHSLShiftedImage(skia, {-1, 0, 0.75});
 
   int x_offset =
       std::floor((size().width() - ExtensionAction::ActionIconSize()) / 2.0);
